change base url

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Saint Silva
 author: Ben Dexter Cooley
 subtitle: electronic music & sound
 
-url: "https://rahulbothra.com"
+url: "https://saint-silva.netlify.app"
 baseurl: "/saint-silva"
 
 footer_only_homepage: true
