--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: Ben Dexter Cooley
 subtitle: electronic music & sound
 
 url: "https://saint-silva.netlify.app"
-baseurl: "/"
+baseurl: "saint-silva.netlify.app"
 
 footer_only_homepage: true
 footer_url: "https://bdextercooley.com"
