add 200 fonr weight

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ posturl: "https://saint-silva.netlify.app/"
 
 footer_only_homepage: true
 footer_url: "https://bdextercooley.com"
-footer_text: "saint silva"
+footer_text: "music & sound by ben dexter cooley"
 
 profile-picture: assets/profile.png
 favicon_location: assets/favicon.ico
