--- a/_config.yml
+++ b/_config.yml
@@ -23,3 +23,5 @@ navbar:
    link: "about"
  - name: "Shows"
    link: "shows"
+ - name: IG
+   absolute-link: "https://www.instagram.com/st.silva.music/"
