change home layout

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: saint silva
+title: SAINT SILVA
 author: Ben Dexter Cooley
 subtitle: electronic music & sound
 
@@ -23,5 +23,5 @@ navbar:
    link: "about"
  - name: "shows"
    link: "shows"
- - name: ig
+ - name: instagram
    absolute-link: "https://www.instagram.com/st.silva.music/"
