name change + new shows

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: SAINT SILVA
+title: ST. SILVA
 author: Ben Dexter Cooley
 subtitle: electronic music & sound
 
-url: "https://saint-silva.netlify.app"
+url: "https://st-silva.netlify.app"
 baseurl: ""
-posturl: "https://saint-silva.netlify.app/"
+posturl: "https://st-silva.netlify.app/"
 
 footer_only_homepage: true
 footer_url: "https://bdextercooley.com"
